<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_screenbg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.perfect11.login_signup.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:onClick="onButtonClick"
            android:src="@drawable/ic_action_back" />

        <com.utility.customView.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="Login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/min_text_size" />
    </RelativeLayout>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/login_banner" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email_drawable_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/password_drawable_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corner_dark_red_btn_bg"
                android:text="@string/action_sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.utility.customView.CustomTextView
                android:id="@+id/ctv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:onClick="onButtonClick"
                android:text="Forgot password?"
                android:textColor="@android:color/white"
                android:textSize="@dimen/min_text_size" />

            <com.utility.customView.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="or"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mid_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_fb"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onButtonClick"
                    android:src="@drawable/fb" />

                <ImageView
                    android:id="@+id/img_google"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onButtonClick"
                    android:src="@drawable/google" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:gravity="center"
                android:onClick="onButtonClick">

                <com.utility.customView.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account? "
                    android:textColor="@android:color/white"

                    android:textSize="@dimen/min_text_size" />

                <com.utility.customView.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/action_register"
                    android:textColor="@color/red_text_color"
                    android:textSize="@dimen/min_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
